--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <h1 class="nav_title">Sayt.uz</h1>
+            <ul class="nav_list">
+                <li class="nav_item">
+                    <a href="#" class="nav_link"></a>
+                </li>
+
+                <li class="nav_item">
+                    <a href="#" class="nav_link"></a>
+                </li>
+
+                <li class="nav_item">
+                    <a href="#" class="nav_link"></a>
+                </li>
+                
+            </ul>
+        </div>
+    </nav>
     
 </body>
 </html>
